# sandbox-conversant-lib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_docs.yaml  run_tests.yaml
app/: streamlit_example.py  styles.css  ui.py  utils.py
conversant/: __init__.py  chatbot.py  prompt_chatbot.py
conversant/demo/: streamlit_example.py  styles.css  ui.py  utils.py
conversant/personas/client-support/: config.json
conversant/personas/fantasy-wizard/: config.json
conversant/personas/fortune-teller/: config.json
conversant/personas/historian/: config.json
conversant/personas/injured-person/: config.json
conversant/personas/math-teacher/: config.json
conversant/personas/personal-trainer/: config.json
conversant/personas/travel-advisor/: config.json
conversant/personas/watch-sales-agent/: config.json
conversant/prompts/: __init__.py  chat_prompt.py  prompt.py  rewrite_prompt.py  start_prompt.py
conversant/search/: __init__.py  document.py  local_searcher.py  searcher.py
conversant/utils/: __init__.py  demo_utils.py
docs/: conversant.html  index.html  search.js  tests.html
docs/conversant/: chatbot.html  prompt_chatbot.html
tests/: conftest.py  test_chatbot.py  test_prompt_chatbot.py
tests/prompts/: test_prompt.py  test_rewrite_prompt.py  test_start_prompt.py
tests/search/: test_document.py  test_local_searcher.py  test_searcher.py
tests/utils/: test_demo_utils.py
