[tool.poetry]
name = "conversant"
version = "0.1.0"
description = "Conversational AI tooling"
authors = ["Cohere ConvAI <convai@cohere.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cohere = "^2.4.2"
toml = "^0.10.2"
streamlit-chat = "^0.0.2.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
wandb = "^0.13.0"
pytest = "^7.1.2"
streamlit = "^1.11.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
pdoc = "^12.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.82"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
