[tool.poetry]
name = "conversant"
version = "0.1.2"
repository = "https://github.com/cohere-ai/sandbox-conversant-lib"
description = "Conversational AI tooling"
readme = "README.md"
authors = ["Cohere ConvAI <convai@cohere.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cohere = "^2.8.0"
toml = "^0.10.2"
pydantic = "^1.10.2"
emoji = "^2.1.0"
emojificate = "^0.6.0"
streamlit-ace = "^0.1.1"
streamlit-talk = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
streamlit = "^1.11.1"
black = "^22.10.0"
pre-commit = "^2.20.0"
pdoc = "^12.1.0"
ruff = "^0.0.94"
isort = "^5.10.1"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
